--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   </section>
   <section class=" flexible-container">
     <div class="half-width">
-      <h3 class="purple-blue">Biri felai kifayat</h3>
+      <h3 class="purple-blue">Me</h3>
       <p>Ami asi toh..astesi ekhon nite
       </p>
       
