--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
   </section>
   <section class=" flexible-container">
     <div class="half-width">
-      <img src="16.jpg" alt="">
+      <img src="16.png" alt="">
     </div>
     <div class="half-width">
       <h3 class="purple-blue">Cute kifu</h3>
